Module no 03 - Mathematics for Data Scientists

--- a/Module no 03- Mathematics for Data Scientists/01 - Statistics for Data Scientists/Lec-3.2 (Inferential-Statistics).ipynb
+++ b/Module no 03- Mathematics for Data Scientists/01 - Statistics for Data Scientists/Lec-3.2 (Inferential-Statistics).ipynb
@@ -16,9 +16,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1cd89b70",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5adc9f64",
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -558,6 +560,32 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "61f7a753",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f050cf1",
+   "metadata": {},
+   "source": [
+    "[Guided Project_Mobile App for Lottery Addiction](https://github.com/AnshuTrivedi/Data-Scientist-In-Python/blob/master/Projects/step_5/3.probability%20fundamentals/Guided%20Project_Mobile%20App%20for%20Lottery%20Addiction.ipynb)\n",
+    "\n",
+    "**In this project, we are going to contribute to the development of a mobile app by writing a couple of functions that are mostly focused on calculating probabilities. The app is aimed to both prevent and treat lottery addiction by helping people better estimate their chances of winning.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c01f06d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6492330",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1944,9 +1972,43 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "6f222184",
+   "metadata": {},
+   "source": [
+    "[Building a Spam Filter with Naive Bayes](https://github.com/AnshuTrivedi/Data-Scientist-In-Python/blob/master/Projects/step_5/4.conditional%20probability/Guided%20Project_Building%20a%20Spam%20Filter%20with%20Naive%20Bayes.ipynb)\n",
+    "\n",
+    "**In this project, we're going to build a spam filter for SMS messages using the multinomial Naive Bayes algorithm. Our goal is to write a program that classifies new messages with an accuracy greater than 80% — so we expect that more than 80% of the new messages will be classified correctly as spam or ham (non-spam).**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ae46e1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "335a4e8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "039b24c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "536e4c5c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3061,6 +3123,32 @@
     "* Independent samples: Does my model have unwanted bias in it, e.g., do white men score higher than other demographic groups with HR model? \n",
     "* Paired samples: Is new TensorFlow.js model significantly faster? (paired by browser / device)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "920e6e11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd26c17a",
+   "metadata": {},
+   "source": [
+    "[Guided Project_Winning Jeopardy](https://github.com/AnshuTrivedi/Data-Scientist-In-Python/blob/master/Projects/step_5/5.Hypothesis%20testing/Guided%20Project_Winning%20Jeopardy.ipynb)\n",
+    "\n",
+    "**Jeopardy is a popular TV show in the US where participants answer questions to win money. It's been running for a few decades, and is a major force in popular culture.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a95caec3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -4796,10 +4884,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64ea204a",
+   "id": "49f07a4d",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3a8c7e9",
+   "metadata": {},
+   "source": [
+    "## [Automobile-Dataset-Analysis](https://github.com/sanithps98/Automobile-Dataset-Analysis)\n",
+    "**This project analyzes and visualizes the Used Car Prices from the Automobile dataset in order to predict the most probable car price.**"
+   ]
   },
   {
    "cell_type": "code",
