Module no 02 - Python for Data Scientists

--- a/Module no 02- Python for Data Scientists/03 - Data Visualization with Matplotlib and Seaborn/Lec-2.25(Data-Visualization-II).ipynb
+++ b/Module no 02- Python for Data Scientists/03 - Data Visualization with Matplotlib and Seaborn/Lec-2.25(Data-Visualization-II).ipynb
@@ -52914,6 +52914,30 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af7966de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "144a531d",
+   "metadata": {},
+   "source": [
+    "### [Case Study - Wine Quality](https://github.com/ptyadana/Data-Science-and-Machine-Learning-Projects-Dojo/tree/master/Data%20Analysis/Project%20-%20Case%20Study%201%20-%20Wine%20Quality)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c162b2ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
