Module no 02 - Python for Data Scientists

--- a/Module no 02- Python for Data Scientists/03 - Data Visualization with Matplotlib and Seaborn/Lec-2.24(Data-Visualization-I).ipynb
+++ b/Module no 02- Python for Data Scientists/03 - Data Visualization with Matplotlib and Seaborn/Lec-2.24(Data-Visualization-I).ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce2533d7",
+   "id": "bfb20db7",
    "metadata": {},
    "source": [
     "This exercise is concerned with baby names in the US between the years 2000 and 2018. The exercise tasks include exploratory data analysis and some data visualization. With these exercises, we will get to practice with some of the most commonly used Pandas features for hand-on data analytics.\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef85eee0",
+   "id": "fcfc985d",
    "metadata": {},
    "source": [
     "**Exercise 1:** Place this CSV file under the same directory where your Jupyter Notebook file is. \n",
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2b8894de",
+   "id": "be61cd69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3b512b12",
+   "id": "df88029e",
    "metadata": {
     "collapsed": true
    },
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "174587c4",
+   "id": "ce5944d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,28 +123,518 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a667b8cc",
+   "execution_count": 28,
+   "id": "570d678c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Emily</td>\n",
+       "      <td>F</td>\n",
+       "      <td>25956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Hannah</td>\n",
+       "      <td>F</td>\n",
+       "      <td>23082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Madison</td>\n",
+       "      <td>F</td>\n",
+       "      <td>19968</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year     name gender  count\n",
+       "0  2000    Emily      F  25956\n",
+       "1  2000   Hannah      F  23082\n",
+       "2  2000  Madison      F  19968"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('datasets/baby_names_2000.csv')\n",
+    "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5841d3b2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44024638",
+   "metadata": {},
+   "source": [
+    "**Exercise 2:** How many rows are there in this dataset?      \n",
+    "**Exercise 3:** How many columns does this dataset have? \n",
+    "**Exercise 4:** What are the names of columns in this dataset? Format the output as a Python list, please. **Hint:** Use the `columns` attribute of `df` and cast the result to a Python list.      \n",
+    "**Exercise 5:** Display the first 10 rows.   \n",
+    "**Exercise 6:** Display the last 10 rows.  \n",
+    "**Exercise 7:** Replace the gender \"M\" with \"B\" for boy, and \"F\" with \"G\" for girl.  \n",
+    "**Exercise 8:** What is the earliest year?    \n",
+    "**Exercise 9:** What is the most recent year?     \n",
+    "**Exercise 10:** How many unique names are there regardless of gender?\n",
+    "**Hint:** Use the `nunique()` function.       \n",
+    "**Exercise 11:** How many unique names for boys?          \n",
+    "**Exercise 12:** How many unique names for girls?   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21177a70",
+   "metadata": {},
+   "source": [
+    "### Optional Exercises\n",
+    "**Exercise 13:** The *gender* variable is categorical with two levels: *B, G*. You will now define a new data frame called `pivot_df` by \"spreading\" these two values into two columns where the cell values will be the sum of all the counts over all the years. You need to have a unique name in each row. To be clear, your new data frame needs to have exactly three columns: *name, B, G*. This is called a **pivot table**. Once you define your new data frame, display the top 5 rows.\n",
+    "\n",
+    "**Hint:** For this, you will need to use the `pivot_table()` function with the `np.sum` aggregation. In particular, you will need to run the line below.\n",
+    "```Python\n",
+    "pivot_df = df.pivot_table(index = 'name', columns = 'gender', values = 'count', aggfunc = np.sum)\n",
+    "```\n",
+    "After that, you will need to run the `dropna()` and `reset_index()` functions.\n",
+    "\n",
+    "\n",
+    "**Bonus:** Get rid of the columns' name on the top left corner. That is, set the data frame's columns' `name` attribute to \"None\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "67456a82",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('datasets/')"
+    "pivot_df = pd.pivot_table(df,index='name',columns='gender', values='count', aggfunc=np.sum)\n",
+    "pivot_df.dropna(inplace=True)\n",
+    "pivot_df.reset_index(inplace=True)\n",
+    "pivot_df.columns.name = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "d12771f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>B</th>\n",
+       "      <th>G</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aaden</td>\n",
+       "      <td>4828.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aadi</td>\n",
+       "      <td>851.0</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Aadyn</td>\n",
+       "      <td>516.0</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Aalijah</td>\n",
+       "      <td>212.0</td>\n",
+       "      <td>134.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Aaliyah</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>79254.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      name       B        G\n",
+       "0    Aaden  4828.0      5.0\n",
+       "1     Aadi   851.0     16.0\n",
+       "2    Aadyn   516.0     16.0\n",
+       "3  Aalijah   212.0    134.0\n",
+       "4  Aaliyah    85.0  79254.0"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pivot_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "143002c9",
+   "metadata": {},
+   "source": [
+    "**Exercise 14:** How many unique names are there that are gender-neutral (that is, names used for both boys and girls)? For more meaningful results, use names where both boy and girl counts are at least 1000.\n",
+    "\n",
+    "**Hint:** Use your new pivot table from above and assign the query result to back to `pivot_df`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "50dc49cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "279"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pivot_df = pivot_df[(pivot_df.B >= 1000)  & (pivot_df.G>=1000)]\n",
+    "pivot_df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9721e4f",
+   "metadata": {},
+   "source": [
+    "**Exercise 15:** For the pivot table, define a new column *Total* which is the sum of boy and girl name counts for each name. Set the new column's data type to an integer using the `astype()` function with the `int` option. Then display 10 randomly selected rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "faafab86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>B</th>\n",
+       "      <th>G</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5301</th>\n",
+       "      <td>Sage</td>\n",
+       "      <td>7230.0</td>\n",
+       "      <td>14625.0</td>\n",
+       "      <td>21855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2186</th>\n",
+       "      <td>Grayson</td>\n",
+       "      <td>72087.0</td>\n",
+       "      <td>2886.0</td>\n",
+       "      <td>74973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5159</th>\n",
+       "      <td>River</td>\n",
+       "      <td>15887.0</td>\n",
+       "      <td>8125.0</td>\n",
+       "      <td>24012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>Adrian</td>\n",
+       "      <td>126181.0</td>\n",
+       "      <td>2862.0</td>\n",
+       "      <td>129043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>220</th>\n",
+       "      <td>Alexis</td>\n",
+       "      <td>38488.0</td>\n",
+       "      <td>169736.0</td>\n",
+       "      <td>208224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1225</th>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>22973.0</td>\n",
+       "      <td>15107.0</td>\n",
+       "      <td>38080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5672</th>\n",
+       "      <td>Sutton</td>\n",
+       "      <td>2570.0</td>\n",
+       "      <td>3367.0</td>\n",
+       "      <td>5937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5056</th>\n",
+       "      <td>Remington</td>\n",
+       "      <td>11867.0</td>\n",
+       "      <td>4473.0</td>\n",
+       "      <td>16340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5591</th>\n",
+       "      <td>Sloan</td>\n",
+       "      <td>1141.0</td>\n",
+       "      <td>4276.0</td>\n",
+       "      <td>5417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3083</th>\n",
+       "      <td>Kadyn</td>\n",
+       "      <td>2823.0</td>\n",
+       "      <td>1269.0</td>\n",
+       "      <td>4092</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           name         B         G   Total\n",
+       "5301       Sage    7230.0   14625.0   21855\n",
+       "2186    Grayson   72087.0    2886.0   74973\n",
+       "5159      River   15887.0    8125.0   24012\n",
+       "104      Adrian  126181.0    2862.0  129043\n",
+       "220      Alexis   38488.0  169736.0  208224\n",
+       "1225    Charlie   22973.0   15107.0   38080\n",
+       "5672     Sutton    2570.0    3367.0    5937\n",
+       "5056  Remington   11867.0    4473.0   16340\n",
+       "5591      Sloan    1141.0    4276.0    5417\n",
+       "3083      Kadyn    2823.0    1269.0    4092"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pivot_df['Total'] = pivot_df.B + pivot_df.G\n",
+    "pivot_df['Total'] = pivot_df['Total'].astype('int')\n",
+    "pivot_df.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7040b80b",
+   "metadata": {},
+   "source": [
+    "**Exercise 16:** What are the top 10 boy names?\n",
+    "\n",
+    "**Hint:** First filter for boys in the `df` data frame (not `pivot_df`). Then use the `groupby()` function on the *names* column followed by the `sum()` function. \n",
+    "\n",
+    "Keep in mind that when an aggregation function such as `sum()` is called an a `groupby` object, it is applied to each group separately. \n",
+    "\n",
+    "Next, sort the resulting data frame by the *count* column in a descending order and finally get the top 10 rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "66519a26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jacob</td>\n",
+       "      <td>425864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>384597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>William</td>\n",
+       "      <td>340194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ethan</td>\n",
+       "      <td>339287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Matthew</td>\n",
+       "      <td>336999</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      name   count\n",
+       "0    Jacob  425864\n",
+       "1  Michael  384597\n",
+       "2  William  340194\n",
+       "3    Ethan  339287\n",
+       "4  Matthew  336999"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pivot_df_m = df[df.gender =='B']\n",
+    "# pivot_df_m[['name','count']].sort_values(by='count', ascending=False).head(10)\n",
+    "\n",
+    "df_m = df[df.gender=='B']\n",
+    "df_m = df_m[['name', 'count']]\n",
+    "df_m = df_m.groupby('name')\n",
+    "df_m = df_m.sum()\n",
+    "df_m.sort_values(by='count', ascending=False, inplace=True)\n",
+    "df_m.reset_index(inplace=True)\n",
+    "df_m.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "712bc3ff",
+   "metadata": {},
+   "source": [
+    "**Exercise 17:** How about the top 10 girl names?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa5ffaa2",
+   "metadata": {},
+   "source": [
+    "**Exercise 18:** How about the top 10 gender-neutral names (after filtering for low-count names)?\n",
+    "\n",
+    "**Hint**: Use the `pivot_df` data frame and sort it."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8d4b1ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!ls da"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31540495",
+   "id": "665c16c8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -152,7 +642,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "564ea758",
+   "id": "c532a9e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1954a601",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -491,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d07815df",
+   "id": "badfc06f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -544,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c5416108",
+   "id": "46a317ec",
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "05cd32f0",
+   "id": "d528bc52",
    "metadata": {},
    "outputs": [
     {
@@ -1137,14 +1635,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af9a8387",
+   "id": "8b292d60",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7f01e25b",
+   "id": "901c2923",
    "metadata": {},
    "source": [
     "**Here if I want chemicals exports in 2016, how can i get?**"
@@ -1153,7 +1651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f441e5bb",
+   "id": "c876c542",
    "metadata": {},
    "outputs": [],
    "source": []
