Module no 03- Mathematics for Data Scientists

--- a/Module no 03- Mathematics for Data Scientists/01 - Statistics for Data Scientists/Lec-3.1(Descriptive-Statistics).ipynb
+++ b/Module no 03- Mathematics for Data Scientists/01 - Statistics for Data Scientists/Lec-3.1(Descriptive-Statistics).ipynb
@@ -355,11 +355,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "459bbac3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "c36c946c",
    "metadata": {},
    "source": [
-    "## Check Your Concepts:\n",
+    "# Check Your Concepts:\n",
     "#### Explain the difference between the following?\n",
     "- Statistics and Statistic.\n",
     "- Population and Sample.\n",
@@ -367,8 +375,45 @@
     "- Quantitative and Qualitative Variables.\n",
     "- Discrete and Continuous Variables.\n",
     "- Primary data and Secondary data.\n",
-    "- Nominal and ordinal Variable."
+    "- Nominal and ordinal Variable.\n",
+    "\n",
+    "#### Define a Variable. Differentiate between a discrete and a continuous variable.\n",
+    "#### Classify the following variables as discrete or continuous:\n",
+    "- The number of students attending a class.\n",
+    "- The amount of mille produced by a cow.\n",
+    "- The number of heads in the toss of 6 coins.\n",
+    "- The yearly income of a College Professor.\n",
+    "- The age of a shopkeeper.\n",
+    "- The weight of a college student\n",
+    "- The number of petals on a flower.\n",
+    "- The number of heads in the toss of 6 coins.\n",
+    "- The life times of television tubes produced by a company.\n",
+    "- Temperature recorded every half hour at a weather bureau.\n",
+    "- The number of shares sold each day in the stock market.\n",
+    "\n",
+    "\n",
+    "#### Classifv each variable as qualitative or quantitative\n",
+    "- Colour of eyes.\n",
+    "- Number of computers sold in the last month.\n",
+    "- Marital status of faculty members.\n",
+    "- Student's weight.\n",
+    "- Lifetime of car batteries.\n",
+    "- Number of burgers sold by a fast food shop.\n",
+    "- Brand of cars.\n",
+    "\n",
+    "#### Distinguish between Primary and Secondary data, giving examples of each.\n",
+    "\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d59dbcd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
